--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "alignment-theme",
-  "displayName": "Alignment Theme",
+  "name": "alignment-theme-vsc",
+  "displayName": "Alignment theme",
+  "description": "A dark theme for Visual Studio Code",
   "version": "0.0.1",
   "publisher": "natixco",
   "license": "MIT",
@@ -17,6 +18,11 @@
     "theme",
     "dark"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/natixco/alignment-theme-vsc"
+  },
+  "icon": "icon.png",
   "contributes": {
     "themes": [
       {
